# embedded-trace

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/instruments/: gpio.rs  mod.rs
